games/minecraft-java/0.0.11/CHANGELOG.md
# Changelog<br>


<a name="minecraft-java-0.0.11"></a>
### [minecraft-java-0.0.11](https://github.com/truecharts/apps/compare/minecraft-java-0.0.10...minecraft-java-0.0.11) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))



<a name="minecraft-java-0.0.10"></a>
### [minecraft-java-0.0.10](https://github.com/truecharts/apps/compare/minecraft-java-0.0.9...minecraft-java-0.0.10) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="minecraft-java-0.0.9"></a>
### [minecraft-java-0.0.9](https://github.com/truecharts/apps/compare/minecraft-java-0.0.8...minecraft-java-0.0.9) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="minecraft-java-0.0.8"></a>
### [minecraft-java-0.0.8](https://github.com/truecharts/apps/compare/minecraft-java-0.0.7...minecraft-java-0.0.8) (2022-02-14)

#### Chore

* update docker general non-major ([#1895](https://github.com/truecharts/apps/issues/1895))



<a name="minecraft-java-0.0.7"></a>
### [minecraft-java-0.0.7](https://github.com/truecharts/apps/compare/minecraft-java-0.0.6...minecraft-java-0.0.7) (2022-02-14)

#### Chore

* update container image tccr.io/truecharts/minecraft-java to v2022.3.0 ([#1897](https://github.com/truecharts/apps/issues/1897))



<a name="minecraft-java-0.0.6"></a>
### [minecraft-java-0.0.6](https://github.com/truecharts/apps/compare/minecraft-java-0.0.5...minecraft-java-0.0.6) (2022-02-10)

#### Chore

* update docker general non-major ([#1876](https://github.com/truecharts/apps/issues/1876))



<a name="minecraft-java-0.0.5"></a>
### [minecraft-java-0.0.5](https://github.com/truecharts/apps/compare/minecraft-java-0.0.4...minecraft-java-0.0.5) (2022-02-08)

#### Chore

* update helm chart common to v8.15.2 ([#1870](https://github.com/truecharts/apps/issues/1870))



<a name="minecraft-java-0.0.4"></a>
### [minecraft-java-0.0.4](https://github.com/truecharts/apps/compare/minecraft-java-0.0.3...minecraft-java-0.0.4) (2022-02-08)

#### Chore

* update docker general non-major ([#1869](https://github.com/truecharts/apps/issues/1869))



<a name="minecraft-java-0.0.3"></a>
### [minecraft-java-0.0.3](https://github.com/truecharts/apps/compare/minecraft-java-0.0.2...minecraft-java-0.0.3) (2022-02-07)

#### Chore

* update helm chart common to v8.15.1 ([#1864](https://github.com/truecharts/apps/issues/1864))



<a name="minecraft-java-0.0.2"></a>
### [minecraft-java-0.0.2](https://github.com/truecharts/apps/compare/minecraft-java-0.0.1...minecraft-java-0.0.2) (2022-02-06)

#### Chore

* update helm chart common to v8.15.0 ([#1856](https://github.com/truecharts/apps/issues/1856))
* update docker general non-major ([#1855](https://github.com/truecharts/apps/issues/1855))
* update docker general non-major ([#1849](https://github.com/truecharts/apps/issues/1849))



<a name="minecraft-java-0.0.1"></a>
### minecraft-java-0.0.1 (2022-02-04)

#### Feat
