games/minecraft-java/0.0.17/CHANGELOG.md
# Changelog<br>


<a name="minecraft-java-0.0.17"></a>
### [minecraft-java-0.0.17](https://github.com/truecharts/apps/compare/minecraft-java-0.0.16...minecraft-java-0.0.17) (2022-03-03)

#### Chore

* remove fixed env from questions.yaml
* update helm chart common to v9 ([#2011](https://github.com/truecharts/apps/issues/2011))

#### Fix

* BREAKING CHANGE Move some env-vars outside of env section ([#2010](https://github.com/truecharts/apps/issues/2010))



<a name="minecraft-java-0.0.15"></a>
### [minecraft-java-0.0.15](https://github.com/truecharts/apps/compare/minecraft-java-0.0.14...minecraft-java-0.0.15) (2022-03-02)

#### Chore

* update helm chart common to v8.17.2 ([#1965](https://github.com/truecharts/apps/issues/1965))



<a name="minecraft-java-0.0.14"></a>
### [minecraft-java-0.0.14](https://github.com/truecharts/apps/compare/minecraft-java-0.0.13...minecraft-java-0.0.14) (2022-02-28)

#### Chore

* update docker general non-major ([#1980](https://github.com/truecharts/apps/issues/1980))



<a name="minecraft-java-0.0.13"></a>
### [minecraft-java-0.0.13](https://github.com/truecharts/apps/compare/minecraft-java-0.0.12...minecraft-java-0.0.13) (2022-02-27)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))

#### Fix

* Fix variable type in questions and add UID variable ([#1974](https://github.com/truecharts/apps/issues/1974))



<a name="minecraft-java-0.0.12"></a>
### [minecraft-java-0.0.12](https://github.com/truecharts/apps/compare/minecraft-java-0.0.11...minecraft-java-0.0.12) (2022-02-22)

#### Chore

* update helm chart common to v8.16.1 ([#1940](https://github.com/truecharts/apps/issues/1940))



<a name="minecraft-java-0.0.11"></a>
### [minecraft-java-0.0.11](https://github.com/truecharts/apps/compare/minecraft-java-0.0.10...minecraft-java-0.0.11) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))



<a name="minecraft-java-0.0.10"></a>
### [minecraft-java-0.0.10](https://github.com/truecharts/apps/compare/minecraft-java-0.0.9...minecraft-java-0.0.10) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="minecraft-java-0.0.9"></a>
### [minecraft-java-0.0.9](https://github.com/truecharts/apps/compare/minecraft-java-0.0.8...minecraft-java-0.0.9) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="minecraft-java-0.0.8"></a>
### [minecraft-java-0.0.8](https://github.com/truecharts/apps/compare/minecraft-java-0.0.7...minecraft-java-0.0.8) (2022-02-14)

#### Chore

* update docker general non-major ([#1895](https://github.com/truecharts/apps/issues/1895))



<a name="minecraft-java-0.0.7"></a>
### [minecraft-java-0.0.7](https://github.com/truecharts/apps/compare/minecraft-java-0.0.6...minecraft-java-0.0.7) (2022-02-14)

#### Chore

* update container image tccr.io/truecharts/minecraft-java to v2022.3.0 ([#1897](https://github.com/truecharts/apps/issues/1897))
